fixed spacing, changed color of button and progress bar to match figma -- need to use API to get progress from Thinkific

--- a/src/trainee-profile/TrainingPage/ProgressBar.css
+++ b/src/trainee-profile/TrainingPage/ProgressBar.css
@@ -7,8 +7,8 @@
   
   .bar-filled {
     min-width: 6%;
-    border: 1px solid #0e204d;
-    background-color: #0e204d;
+    border: 1px solid #091734;
+    background-color: #091734;
     height: 2em;
     width: 10em;
     border-radius: 15px;
