--- a/src/trainee-profile/TrainingPage/Training.css
+++ b/src/trainee-profile/TrainingPage/Training.css
@@ -7,13 +7,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
   }
 
-.thinkify {
-    background-color: #0e204d;
+.training-button-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.training-button {
+    background-color: #091734;
     color: white;
     border: none;
-    border-radius: 10px;
-    padding: 0.5em 1.5em;
-    font-size: 1.2em;
+    border-radius: 20px;
+    padding: 0.5em 2.5em;
+    font-size: 2.25em;
+}
+
+.training-button:hover {
+  filter: brightness(1.2);
+}
+
+.click-text {
+  font-size: 1.5em;
 }
